# webui

./: .clineignore  .clinerules  .gitignore  CLINE_HISTORY.md  Cargo.toml  build.rs  package-lock.json
.cargo/: config.toml
.config/: cargo.toml
frontend/: index.html
memory/: cross_compile_pure_rust.md
scripts/: deploy-test.ps1  deploy-test.sh  easystier.sh  webui.sh
src/: index.html  input.css  login.html  main.rs
src/at/: grammar.pest  mod.rs  parser.rs  response.rs  utils.rs
src/templates/: dist_index.html
templates/: style.css
