[package]
name = "quectel-webui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "macros"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.32"
sysinfo = "0.39.2"
chrono = "0.4.44"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
fs2 = "0.4"
jsonwebtoken = "9"
argon2 = "0.5"
anyhow = "1"