[package]
name = "quectel-webui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "macros"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.32"
chrono = "0.4.44"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
hmac = "0.12"
base64 = "0.22"
anyhow = "1"